Update overall GUI
Adjusted base labels colour, font and neon style
Removed strokes (weird black border in safe zone)
Adjust CPU colours to match theme
 better
Changed cards and added effects to them
Coloured player names according to their colour
Updated tutorial design
Update enter player name design
Adjusted play and skip turn button positions
Adjusted overall positions and colour schema
Next and current player colour changes
Cleaned unused packages and assets